# internal/controller/http_controller/ctrl.go
@@ -6,6 +6,7 @@ import (
 	"errors"
 	"fmt"
 	"net/http"
+	"strings"
 	"sync"
 	"time"
 
@@ -176,9 +177,13 @@ func (ctrl *HttpController[V]) deleteKVKeyHandler(w http.ResponseWriter, req *ht
 		return
 	}
 
-	req.URL.Query().Get("from")
+	procOnStr := req.Header.Get("X-Processed-On")
+	procOn := []string{}
+	if procOnStr != "" {
+		procOn = strings.Split(procOnStr, ",")
+	}
 
-	if err := ctrl.proc.Remove(req.Context(), key, req.URL.Query().Get("from")); err != nil {
+	if err := ctrl.proc.Remove(req.Context(), key, procOn); err != nil {
 		if errors.Is(err, model.KeyNotFoundError{Key: key}) {
 			_ = http_helpers.RespondWithErr(w, http.StatusNotFound, nil)
 			ctrl.metrics.errProcessCnt.Inc()
@@ -223,11 +228,17 @@ func (ctrl *HttpController[V]) postKVHandler(w http.ResponseWriter, req *http.Re
 		return
 	}
 
+	procOnStr := req.Header.Get("X-Processed-On")
+	procOn := []string{}
+	if procOnStr != "" {
+		procOn = strings.Split(procOnStr, ",")
+	}
+
 	if err := ctrl.proc.AddOrUpdate(
 		req.Context(),
 		kvp.Key,
 		kvp.Value,
-		dtoKV.From,
+		procOn,
 	); err != nil {
 		if errors.Is(err, model.KeyNotFoundError{Key: kvp.Key}) {
 			_ = http_helpers.RespondWithErr(w, http.StatusNotFound, nil)
