# internal/controller/http_controller/docs/openapi.yaml
@@ -47,6 +47,12 @@ paths:
           schema:
             type: string
             minLength: 1
+        - name: X-Processed-On
+          in: header
+          required: false
+          schema:
+            type: string
+          example: "node1,node2,node3"
       responses:
         200:
           description: OK
@@ -59,6 +65,13 @@ paths:
 
   /kv:
     post:
+      parameters:
+        - name: X-Processed-On
+          in: header
+          required: false
+          schema:
+            type: string
+          example: "node1,node2,node3"
       requestBody:
         required: true
         content:
